<resources>
    <string name="app_name">Ratetatouille</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ajouter_restaurant">Ajouter un restaurant</string>
    <string name="ajouter_restaurant">Ajouter un restaurant</string>
    <string name="nom">Nom</string>
    <string name="adresse">Adresse: N°</string>
    <string name="ville">Ville</string>
    <string name="pays">Pays</string>
    <string name="telephone">Téléphone</string>
    <string name="site_internet">Site Internet</string>
    <string name="note_appreciation">Note Appréciation</string>
    <string name="cout_moyen_repas">Coût moyen du Repas</string>
    <string name="specialitees">Spécialitée(s)</string>
    <string name="commentaire">Commentaire</string>
    <string name="description">Description</string>
    <string name="rue">Rue</string>
    <string name="exemple_adresse">ex: Avenue Montaigne</string>
    <string name="ratetatouille">Ratetatouille</string>
    <string name="Favoris">Favoris</string>
    <string name="adresse_a_supprimer">Adresse</string>
    <string name="supprimer">Supprimer</string>
    <string name="mes_restaurants">Mes Restaurants</string>
    <string name="hint_spec">ex: FastFood, Asiatique</string>
    <string name="hint_desctiption">Décrivez ce restaurant</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="bouton_favoris">bouton favoris</string>
    <string name="localisation_resto">localisation_resto</string>
    <string name="lundi">Lundi</string>
    <string name="mardi">Mardi</string>
    <string name="mercredi">Mercredi</string>
    <string name="jeudi">Jeudi</string>
    <string name="vendredi">Vendredi</string>
    <string name="samedi">Samedi</string>
    <string name="dimanche">Dimanche</string>
    <string name="fermé">Fermé</string>
    <string name="horaire_resto_standard">11:00–23:00</string>
    <string name="chercher_resto">chercher_restaurant</string>
    <string name="nom_search">NOM</string>
    <string name="adresse_search">ADRESSE</string>
    <string name="ville_search">VILLE</string>
    <string name="pays_search">PAYS</string>
    <string name="spec_search">SPECIALITEE(S)</string>
    <string name="note_search">NOTE APPRECIATION</string>
    <string name="title_activity_edit_restaurant">EditRestaurant</string>
    <string name="modifier_resto">Modifier le restaurant</string>
    <string name="edit_resto">Editer restaurant</string>
    <string name="localiser_gmaps">Localiser sur Gmaps</string>
    <string name="localiser_streetview">Localiser sur Google StreetView</string>
    <string name="imageResto">Image du restaurant</string>
    <string name="photo_restaurant">photo restaurant</string>
    <string name="appeler_resto">Appeler le restaurant</string>
    <string name="add_calendar_resto">Ajouter un rdv au calendrier</string>
    <string name="nom2">Nom:</string>
    <string name="adresse2">Adresse:</string>
    <string name="ville2">Ville:</string>
    <string name="pays2">Pays:</string>
    <string name="tel2">Téléphone:</string>
    <string name="site_internet2">Site Internet:</string>
    <string name="note_app2">Note d\'appréciation:</string>
    <string name="cout_moyen2">Cout moyen d\'un repas:</string>
    <string name="latitude2">Latitude:</string>
    <string name="longitude2">Longitude:</string>
    <string name="spec2">Spécialitée(s):</string>
    <string name="desc">Description:</string>
    <string name="commentaires">Commentaires:</string>
    <string name="lundi2">Lundi:</string>
    <string name="mardi2">Mardi:</string>
    <string name="mercredi2">Mercredi:</string>
    <string name="jeudi2">Jeudi:</string>
    <string name="vendredi2">Vendredi:</string>
    <string name="samedi2">Samedi:</string>
    <string name="dimanche2">Dimanche:</string>
    <string name="add_to_contacts">Ajouter aux contacts</string>
    <string name="inviter_sms">Inviter un ami par sms</string>
    <string name="record_voice_resto">Enregistrer un commentaire vocal</string>
    <string name="splash_screen">splash screen</string>
    <string name="tout_supprimer">Tout supprimer</string>
</resources>
