<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.netbook.ratetatouille.AjouterRestaurant"
    tools:showIn="@layout/activity_ajouter_restaurant"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_restaurant"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adresse"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/numero_rue"
                    android:layout_width="30sp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rue"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/adresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:hint="@string/exemple_adresse"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ville"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/ville"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pays"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/pays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_internet"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/site_internet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_appreciation"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <Spinner
                    android:id="@+id/note_appreciation_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cout_moyen_repas"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/cout_moyen_repas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"
                    android:ems="3"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"
                    android:ems="3"
                    />
                <ImageButton
                    android:id="@+id/localiser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_dialog_map"
                    android:contentDescription="@string/localisation_resto"
                    android:onClick="localiser"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specialitees"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"

                    />
                <EditText
                    android:id="@+id/spécialité"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:hint="@string/hint_spec"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:hint="@string/hint_desctiption"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commentaire"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/commentaire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lundi"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/lundi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/horaire_resto_standard"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mardi"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/mardi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/horaire_resto_standard"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mercredi"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/mercredi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/horaire_resto_standard"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jeudi"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/jeudi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/horaire_resto_standard"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vendredi"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/vendredi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/horaire_resto_standard"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/samedi"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/samedi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/horaire_resto_standard"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dimanche"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/dimanche"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/fermé"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
